# live_view_test

./: Cargo.toml  index.html  package-lock.json  package.json
app/: Cargo.toml
app/src/: lib.rs  request.rs  view.rs
app_ts/: README.md  package-lock.json  package.json
app_ts/public/: index.html
app_ts/src/: App.tsx  api.ts  hooks.ts  index.css  index.tsx  store.ts
app_ts/src/components/: Main.tsx
app_ts/src/features/common/: commonSlice.ts
app_ts/src/features/common/components/: Errors.tsx  Header.tsx  Main.tsx  Sidebar.tsx
app_ts/src/features/todos/: model.ts  todosSlice.ts
app_ts/src/features/todos/components/: NewTodoInput.tsx  Todo.tsx  TodoList.tsx  TodoListItem.tsx
common/: Cargo.toml
common/src/: lib.rs
pkg/: style.css
src/: app.rs  main.rs  services.rs
src/services/: todo.rs
